--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+snack-bar-container.greenSnackBar  .mat-button-wrapper {
+    color:lime;
+}
+
+snack-bar-container.redSnackBar  .mat-button-wrapper {
+    color:red;
+}
